# apriltag_dock

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
apriltag_dock/: CMakeLists.txt  package.xml
apriltag_dock/action/: AutoDock.action  FindAprilTag.action
apriltag_dock/include/apriltag_dock/: auto_dock_client.hpp  find_apriltag.hpp  find_apriltag_server.hpp
apriltag_dock/src/: auto_dock_action_server.cpp  auto_dock_client.cpp  auto_dock_server.cpp  find_apriltag.cpp  find_apriltag_server.cpp  main.cpp
apriltag_dock_msgs/: CMakeLists.txt  package.xml
apriltag_dock_msgs/action/: AutoDock.action
apriltag_ros/: CMakeLists.txt
apriltag_ros/include/apriltag_ros/: apriltag_node.hpp
apriltag_ros/launch/: apriltag_launch.py
apriltag_ros/params/: apriltag_params.yaml
apriltag_ros/src/: apriltag_node.cpp  main.cpp  tag_functions.cpp
simulation_launch/: CMakeLists.txt
simulation_launch/config/: nav2_params.yaml  urdf_config.rviz
simulation_launch/launch/: localization_launch.py  robot_bringup.launch.py  robot_world.launch.py  spawn_robot.launch.py
simulation_launch/map/: map.yaml
simulation_launch/urdf/: mobile_bot.urdf  mobile_bot.xacro
simulation_launch/worlds/: apriltag_test.world  house_with_apriltag.world  house_with_apriltag_2.world
